; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_storage32.c_entryNameCmp.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_storage32.c_entryNameCmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64*, i64*)* @entryNameCmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @entryNameCmp(i64* %0, i64* %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i64, align 8
  store i64* %0, i64** %3, align 8
  store i64* %1, i64** %4, align 8
  %6 = load i64*, i64** %3, align 8
  %7 = call i64 @lstrlenW(i64* %6)
  %8 = load i64*, i64** %4, align 8
  %9 = call i64 @lstrlenW(i64* %8)
  %10 = sub nsw i64 %7, %9
  store i64 %10, i64* %5, align 8
  br label %11

11:                                               ; preds = %20, %2
  %12 = load i64, i64* %5, align 8
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %11
  %15 = load i64*, i64** %3, align 8
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br label %18

18:                                               ; preds = %14, %11
  %19 = phi i1 [ false, %11 ], [ %17, %14 ]
  br i1 %19, label %20, label %32

20:                                               ; preds = %18
  %21 = load i64*, i64** %3, align 8
  %22 = getelementptr inbounds i64, i64* %21, i32 1
  store i64* %22, i64** %3, align 8
  %23 = load i64, i64* %21, align 8
  %24 = trunc i64 %23 to i32
  %25 = call i64 @towupper(i32 %24)
  %26 = load i64*, i64** %4, align 8
  %27 = getelementptr inbounds i64, i64* %26, i32 1
  store i64* %27, i64** %4, align 8
  %28 = load i64, i64* %26, align 8
  %29 = trunc i64 %28 to i32
  %30 = call i64 @towupper(i32 %29)
  %31 = sub nsw i64 %25, %30
  store i64 %31, i64* %5, align 8
  br label %11

32:                                               ; preds = %18
  %33 = load i64, i64* %5, align 8
  ret i64 %33
}

declare dso_local i64 @lstrlenW(i64*) #1

declare dso_local i64 @towupper(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
